[package]
name = "coppwr"
version = "1.5.1"
authors = ["Dimitris Papaioannou <dimtpap@protonmail.com>"]
edition = "2021"
rust-version = "1.72"
license = "GPL-3.0-only"
description = "Low level control GUI for the PipeWire multimedia server"
repository = "https://github.com/dimtpap/coppwr"
homepage = "https://dimtpap.ovh/coppwr"
readme = "README.md"
keywords =  ["pipewire", "egui", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = {version = "*", git = "https://gitlab.freedesktop.org/dimtpap/pipewire-rs.git", rev = "605d15996f3258b3e1cc34e445dfbdf16a366c7e"}
egui_node_graph = {version = "*", git = "https://github.com/dimtpap/egui_node_graph.git", rev = "a2e93a2826f90c21f13fa8fecf9076da611432fd"}
eframe = "0.26.2"
egui = {version = "0.26.2", features = ["rayon"]}
egui_plot = "0.26.2"
egui_dock = "0.11.1"
serde = {version = "1.0", optional = true}
ashpd = {version = "0.7.0", optional = true}
pollster = {version = "0.3.0", optional = true}

[features]
default = ["persistence"]

# Used for the Link permission
pw_v0_3_77 = ["pipewire/v0_3_77"]
xdg_desktop_portals = ["dep:ashpd", "dep:pollster"]
persistence = ["dep:serde", "egui_dock/serde", "eframe/persistence"]

[profile.release]
lto = true
strip = true

[[bin]]
name = "coppwr"
test = false
bench = false

[package.metadata.deb]
depends = "pipewire"
suggests = "xdg-desktop-portal"
assets = [
	["target/release/coppwr", "/usr/bin/coppwr", "755"],
	["LICENSE", "/usr/share/licenses/coppwr/LICENSE", "644"],
	["assets/io.github.dimtpap.coppwr.desktop", "/usr/share/applications/io.github.dimtpap.coppwr.desktop", "644"],
	["assets/io.github.dimtpap.coppwr.metainfo.xml", "/usr/share/metainfo/io.github.dimtpap.coppwr.metainfo.xml", "644"],
	["assets/icon/scalable.svg", "/usr/share/icons/hicolor/scalable/apps/io.github.dimtpap.coppwr.svg", "644"],
	["assets/icon/512.png", "/usr/share/icons/hicolor/512x512/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/256.png", "/usr/share/icons/hicolor/256x256/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/128.png", "/usr/share/icons/hicolor/128x128/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/64.png", "/usr/share/icons/hicolor/64x64/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/48.png", "/usr/share/icons/hicolor/48x48/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/32.png", "/usr/share/icons/hicolor/32x32/apps/io.github.dimtpap.coppwr.png", "644"],
]
features = ["xdg_desktop_portals"]

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/coppwr", dest = "/usr/bin/coppwr", mode = "755" },
	{ source = "assets/io.github.dimtpap.coppwr.desktop", dest = "/usr/share/applications/io.github.dimtpap.coppwr.desktop", mode = "644" },
	{ source = "assets/io.github.dimtpap.coppwr.metainfo.xml", dest = "/usr/share/metainfo/io.github.dimtpap.coppwr.metainfo.xml", mode = "644"},
	{ source = "assets/icon/scalable.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.dimtpap.coppwr.svg", mode = "644" },
	{ source = "assets/icon/512.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/256.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/128.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/64.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/48.png", dest = "/usr/share/icons/hicolor/48x48/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/32.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.dimtpap.coppwr.png", mode = "644" },
]
[package.metadata.generate-rpm.requires]
pipewire = ">= 0.3"
