[package]
name = "coppwr"
version = "1.6.2"
authors = ["Dimitris Papaioannou <dimtpap@protonmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "Low level control GUI for the PipeWire multimedia server"
repository = "https://github.com/dimtpap/coppwr"
homepage = "https://dimtpap.ovh/coppwr"
readme = "README.md"
keywords =  ["pipewire", "gui"] 
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = {version = "*", git = "https://gitlab.freedesktop.org/dimtpap/pipewire-rs.git", rev = "605d15996f3258b3e1cc34e445dfbdf16a366c7e"}
egui_node_graph = {version = "*", git = "https://github.com/dimtpap/egui_node_graph.git", rev = "237d2cabdae9d7e0a5bf37ae559f164c80c20ee6"}
eframe = "0.32.1"
egui = {version = "0.32.1", features = ["rayon"]}
egui_plot = "0.33.0"
egui_dock = "0.17.0"
serde = {version = "1.0", optional = true}
ashpd = {version = "0.11.0", optional = true, default-features = false, features = ["async-std"]} # Default is tokio which requires depending on it
pollster = {version = "0.4.0", optional = true}
futures-util = {version = "0.3.31", optional = true}

[features]
default = ["xdg_desktop_portals", "persistence"]

# Used for the Link permission
pw_v0_3_77 = ["pipewire/v0_3_77"]
xdg_desktop_portals = ["dep:ashpd", "dep:pollster", "dep:futures-util"]
persistence = ["dep:serde", "egui_dock/serde", "eframe/persistence"]

[profile.release]
lto = true
strip = true

[[bin]]
name = "coppwr"
test = false
bench = false

[package.metadata.deb]
depends = ["libc6", "libgcc-s1", "libpipewire-0.3-0", "libxkbcommon0", "libxkbcommon-x11-0"]
recommends = ["pipewire"]
suggests = ["xdg-desktop-portal"]
assets = [
	["target/release/coppwr", "/usr/bin/coppwr", "755"],
	["LICENSE", "/usr/share/licenses/coppwr/LICENSE", "644"],
	["assets/io.github.dimtpap.coppwr.desktop", "/usr/share/applications/io.github.dimtpap.coppwr.desktop", "644"],
	["assets/io.github.dimtpap.coppwr.metainfo.xml", "/usr/share/metainfo/io.github.dimtpap.coppwr.metainfo.xml", "644"],
	["assets/icon/scalable.svg", "/usr/share/icons/hicolor/scalable/apps/io.github.dimtpap.coppwr.svg", "644"],
	["assets/icon/512.png", "/usr/share/icons/hicolor/512x512/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/256.png", "/usr/share/icons/hicolor/256x256/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/128.png", "/usr/share/icons/hicolor/128x128/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/64.png", "/usr/share/icons/hicolor/64x64/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/48.png", "/usr/share/icons/hicolor/48x48/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/32.png", "/usr/share/icons/hicolor/32x32/apps/io.github.dimtpap.coppwr.png", "644"],
]
extended-description = """coppwr displays and provides control over many aspects of PipeWire \
as directly as possible in an organized and visual way. It can help with debugging and diagnosing \
a PipeWire setup or with developing software that interacts with PipeWire."""

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/coppwr", dest = "/usr/bin/coppwr", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/coppwr/LICENSE", mode = "644"},
	{ source = "assets/io.github.dimtpap.coppwr.desktop", dest = "/usr/share/applications/io.github.dimtpap.coppwr.desktop", mode = "644" },
	{ source = "assets/io.github.dimtpap.coppwr.metainfo.xml", dest = "/usr/share/metainfo/io.github.dimtpap.coppwr.metainfo.xml", mode = "644"},
	{ source = "assets/icon/scalable.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.dimtpap.coppwr.svg", mode = "644" },
	{ source = "assets/icon/512.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/256.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/128.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/64.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/48.png", dest = "/usr/share/icons/hicolor/48x48/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/32.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.dimtpap.coppwr.png", mode = "644" },
]
[package.metadata.generate-rpm.requires]
pipewire = ">= 0.3"
[package.metadata.generate-rpm.suggests]
xdg-desktop-portal = ">= 0.10"
