[package]
name = "coppwr"
version = "1.7.0"
authors = ["Dimitris Papaioannou <dimtpap@protonmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "Low level control GUI for the PipeWire multimedia server"
repository = "https://github.com/dimtpap/coppwr"
homepage = "https://dimtpap.ovh/coppwr"
readme = "README.md"
keywords = ["pipewire", "gui"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = {version = "*", git = "https://gitlab.freedesktop.org/dimtpap/pipewire-rs.git", rev = "bc3f3ddcf1d61083257f5f04b800c5a411fc2c4d"}

# egui
eframe = "0.32.3"
egui = {version = "0.32.3", features = ["rayon"]}
egui_plot = "0.33.0"
egui_dock = "0.17.0"
egui-snarl = {version = "*", git = "https://github.com/dimtpap/egui-snarl.git", rev = "0d51e7a24e1849114c8806dc6351cebc58dbabcc"} 

# Portals
ashpd = {version = "0.12.0", optional = true, default-features = false, features = ["async-std"]}
pollster = {version = "0.4.0", optional = true}
futures-util = {version = "0.3.31", optional = true}

# Utilities
serde = {version = "1.0", optional = true}

[features]
default = ["xdg_desktop_portals", "persistence"]

pw_v0_3_77 = ["pipewire/v0_3_77"] # Used for the Link permission
xdg_desktop_portals = ["dep:ashpd", "dep:pollster", "dep:futures-util"]
persistence = ["dep:serde", "egui_dock/serde", "eframe/persistence"]

[profile.release]
lto = "thin"
strip = true

[[bin]]
name = "coppwr"
test = false
bench = false

[package.metadata.deb]
depends = ["libc6", "libgcc-s1", "libpipewire-0.3-0", "libxkbcommon0", "libxkbcommon-x11-0"]
recommends = ["pipewire"]
suggests = ["xdg-desktop-portal"]
assets = [
	["target/release/coppwr", "/usr/bin/coppwr", "755"],
	["LICENSE", "/usr/share/licenses/coppwr/LICENSE", "644"],
	["assets/io.github.dimtpap.coppwr.desktop", "/usr/share/applications/io.github.dimtpap.coppwr.desktop", "644"],
	["assets/io.github.dimtpap.coppwr.metainfo.xml", "/usr/share/metainfo/io.github.dimtpap.coppwr.metainfo.xml", "644"],
	["assets/icon/scalable.svg", "/usr/share/icons/hicolor/scalable/apps/io.github.dimtpap.coppwr.svg", "644"],
	["assets/icon/512.png", "/usr/share/icons/hicolor/512x512/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/256.png", "/usr/share/icons/hicolor/256x256/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/128.png", "/usr/share/icons/hicolor/128x128/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/64.png", "/usr/share/icons/hicolor/64x64/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/48.png", "/usr/share/icons/hicolor/48x48/apps/io.github.dimtpap.coppwr.png", "644"],
	["assets/icon/32.png", "/usr/share/icons/hicolor/32x32/apps/io.github.dimtpap.coppwr.png", "644"],
]
extended-description = """coppwr displays and provides control over many aspects of PipeWire \
as directly as possible in an organized and visual way. It can help with debugging and diagnosing \
a PipeWire setup or with developing software that interacts with PipeWire."""

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/coppwr", dest = "/usr/bin/coppwr", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/coppwr/LICENSE", mode = "644"},
	{ source = "assets/io.github.dimtpap.coppwr.desktop", dest = "/usr/share/applications/io.github.dimtpap.coppwr.desktop", mode = "644" },
	{ source = "assets/io.github.dimtpap.coppwr.metainfo.xml", dest = "/usr/share/metainfo/io.github.dimtpap.coppwr.metainfo.xml", mode = "644"},
	{ source = "assets/icon/scalable.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.dimtpap.coppwr.svg", mode = "644" },
	{ source = "assets/icon/512.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/256.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/128.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/64.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/48.png", dest = "/usr/share/icons/hicolor/48x48/apps/io.github.dimtpap.coppwr.png", mode = "644" },
	{ source = "assets/icon/32.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.dimtpap.coppwr.png", mode = "644" },
]
[package.metadata.generate-rpm.requires]# PipeWire
pipewire = ">= 0.3"
[package.metadata.generate-rpm.suggests]
xdg-desktop-portal = ">= 0.10"
